add class notes and *CalculatorProject

--- a/Week_1/Day_2/style.css
+++ b/Week_1/Day_2/style.css
@@ -19,7 +19,7 @@ h1 {
 	margin-bottom: 0;
 }
 
-#heading {
+.heading {
 	margin-top: 15px;
 	margin-bottom: 15px;
 	border-bottom: 1px solid black;
@@ -38,4 +38,16 @@ h1 {
 #Descriptions {
 	margin-top: 2px;
 	margin-right: 250px;
+}
+
+.right {
+	float: right;
+}
+
+.left {
+	float: left;
+}
+
+.clear {
+	clear: both;
 }
