--- a/Week_1/day_5/daily_challenge/style.css
+++ b/Week_1/day_5/daily_challenge/style.css
@@ -26,8 +26,8 @@ body {
 	z-index: 1030;
 }
 
-.nav-item > a {
-	color: var(--my-darkgreen);
+a > h6 {
+	/*color: var(--my-darkgreen);*/
 	font-size: 18px;
 }
 
@@ -87,4 +87,9 @@ h6 {
 	.col-md-2 {
 		border-right: 1px solid black;
 	}
+}
+
+.headspacing > h2 {
+	margin-top: 60px;
+	margin-bottom: 30px;
 }
