--- a/Week_3/Hackathon/style_survey.css
+++ b/Week_3/Hackathon/style_survey.css
@@ -3,11 +3,11 @@
 }
 
 body {
-	background-color: #2BE7E9
+	background: linear-gradient(to left, rgb(215, 215, 215), rgb(0, 128, 255));
 }
 
 .btn {
-  border: 1px solid #2BE7E9;
+  border: 1px solid rgb(215, 215, 215);
   outline: none;
   padding: 10px 16px;
   background-color: #f1f1f1;
