adds files from w6d3

--- a/Week_6/Day_2/onlineStore/templates/home.html
+++ b/Week_6/Day_2/onlineStore/templates/home.html
@@ -7,6 +7,7 @@
 {%  block content %}
     <br>
     <h1>Welcome to We're Storey</h1>
+    <img src="{{ url_for('static', filename='images/giraffe.jpg') }}">
     <p>This is from the home content block</p>
     <button class="btn btn-primary">Click me</button>
 
