--- a/Week_6/Day_3/exercise/w6d3ex Store/templates/base.html
+++ b/Week_6/Day_3/exercise/w6d3ex Store/templates/base.html
@@ -6,23 +6,13 @@
     <title>Base</title>
     {% endblock %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
-    {% block css %}
-    {% endblock %}
-
-    {% block js %}
-    {% endblock %}
-
 </head>
 <body>
 
-    {% include 'navbar.html' %}
-
-
+    {% include 'nav.html' %}
 
     {% block content %}
-        <h1>Welcome to We're Storey</h1>
-        <h1>This is from base</h1>
+    <h1>This is from base</h1>
     {% endblock %}
 
 </body>
