adds w6d4 (continues from d3)

--- a/Week_6/Day_3/exercise/w6d3ex Store/templates/base.html
+++ b/Week_6/Day_3/exercise/w6d3ex Store/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     {% block title %}
-    <title>Base</title>
+    <title>Ricky's Used Shit</title>
     {% endblock %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
