--- a/Week_6/Day_3/exercise/w6d3ex Store/templates/nav.html
+++ b/Week_6/Day_3/exercise/w6d3ex Store/templates/nav.html
@@ -15,6 +15,12 @@
         <li class="nav-item active">
         <a class="nav-link" href="/products">Products</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/login">Sell your own shit</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/view_cart">My Cart</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
