--- a/Week_6/Day_5/project/OlehOleh/static/styles/sign_in.css
+++ b/Week_6/Day_5/project/OlehOleh/static/styles/sign_in.css
@@ -10,7 +10,7 @@
 
 #submit {
     box-shadow: 0px 10px 14px -7px #026C85;
-	background:linear-gradient(to bottom, #0391B2 5%, #026C85 100%);
+	background:linear-gradient(to bottom, #A4CAE3 5%, #2F6E97 100%);
 	border-radius:4px;
 	border:1px solid #026C85;
 	display:inline-block;
