--- a/Week_6/Day_5/project/OlehOleh/templates/home.html
+++ b/Week_6/Day_5/project/OlehOleh/templates/home.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 
-    <h1>Welcome to Oleh Oleh!</h1>
-    <h4>Your one stop shop for all things as an Oleh Hadash</h4>
+    <h1 id="title">Oleh²</h1>
+    <h5 id="subtitle">[Aliyah just got easy]</h5>
+
+    <div id="section2">
+
+    </div>
 
 
 
