--- a/Week_6/Day_5/project/OlehOleh/templates/nav.html
+++ b/Week_6/Day_5/project/OlehOleh/templates/nav.html
@@ -1,4 +1,4 @@
-  <nav class="nav-extended">
+  <nav class="nav-extended" style="background-color: #A4CAE3;">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center"> <img src="/static/images/logo.png" id="logo" style="height: 130px"> </a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
