adds class notes - IMDB project

--- a/Week_8/bike_store/rent/templates/rent/rental.html
+++ b/Week_8/bike_store/rent/templates/rent/rental.html
@@ -7,16 +7,11 @@
         <li>
                 Rent Date: {{ rental.rental_date }}<br>
                 Return Date: {{ rental.return_date }}<br>
+                Customer: {{ rental.customer }}<br>
+                Item: {{ rental.vehicle }}<br>
         </li>
     {% endfor %}
 </ul>
 
-<ul>
-    {% for vehicle in vehicles %}
-        <li>
-                {{ vehicle }}<br>
-        </li>
-    {% endfor %}
-</ul>
 
 {% endblock %}
