--- a/Week_8/bike_store/rent/templates/base.html
+++ b/Week_8/bike_store/rent/templates/base.html
@@ -7,9 +7,37 @@
 </head>
 <body>
 
-<h1>Rentals</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/rent">Bike Store</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+      <li class="nav-item active">
+        <a class="nav-link" href="/rent/rental">Rentals <span class="sr-only">(current)</span></a>
+      </li>
+
+      {% if request.user.is_authenticated %}
+        <li class="nav-item active" style="color: white; margin-left: 5px; margin-right: 5px; margin-top: 10px">User: {{ user.get_username }}</li>
+        <li class="nav-item active"><a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+      {% else %}
+        <li class="nav-item active"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+      {% endif %}
+
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+<br>
 
 {% block content %}
+
 {% endblock %}
 
 
