--- a/Final_Project/travel/templates/navbar.html
+++ b/Final_Project/travel/templates/navbar.html
@@ -17,6 +17,7 @@
       <ul class="tabs tabs-transparent">
         <li class="tab"><a href="/account">Home</a></li>
         <li class="tab"><a href="/trips">Trips</a></li>
+        <li class="tab"><a href="/spending">Spending</a></li>
         <li class="tab"><a href="">Forum</a></li>
         {% if user.is_superuser %}
         <li class="tab"><a href="/admin">Admin</a></li>
