--- a/Final_Project/travel/templates/spending/trip_finances.html
+++ b/Final_Project/travel/templates/spending/trip_finances.html
@@ -10,16 +10,52 @@
 
 {% block content %}
 
-<ul class="collection with-header" style="width: 50vw; margin: auto; margin-top: 20px;">
-        <li class="collection-header"><h4>{{ trip }} - spending</h4></li>
+<ul class="collection with-header" style="width: 75vw; margin: auto; margin-top: 20px;">
+        <li class="collection-header" style="text-align: center;"><h4>{{ trip }} - spending</h4></li>
 
+        <table class="highlight">
+                <thead>
+                  <tr>
+                      <th>Item</th>
+                      <th>Description</th>
+                      <th>Price</th>
+                      <th>Purchased By</th>
+                      <th>Split Between</th>
+                      <th>Time</th>
+                      <th>Category</th>
+                      <th>ID</th>
+                      <th></th>
+                      <th></th>
+                  </tr>
+                </thead>
 
+                <tbody>
+                {% for purchase in purchases %}
+                  <tr>
+                    <td>{{ purchase.item }}</td>
+                    <td>{{ purchase.description }}</td>
+                    <td>${{ purchase.price }}</td>
+                    <td>@{{ purchase.buyer }}</td>
 
-        <ul>
-        {% for trip in trips %}
-            <li class="collection-item"><div>{{ trip }}<a href="finances/trip_{{ trip.id }}" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-        {% endfor %}
-        </ul>
+                    <td>
+                            {% for sharer in purchase.sharers.all %}
+                            @{{ sharer }}<br>
+                            {% endfor %}
+                    </td>
+
+                    <td>{{ purchase.datetime }}</td>
+                    <td>{{ purchase.category }}</td>
+                    <td>{{ purchase.id }}</td>
+                    <td><a href="#"><i class="material-icons">edit</i></a></td>
+                    <td><a href="#"><i class="material-icons">delete</i></a></td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+        </table>
+
+        <li class="collection-footer" style="height: 60px; display: flex; justify-content: space-around; align-items: center;">
+                <a href="add_purchase_{{ trip.id }}" class="waves-effect waves-light btn-small">Add Purchase</a>
+        </li>
 
 </ul>
 
