--- a/Final_Project/travel/templates/spending/edit_purchase.html
+++ b/Final_Project/travel/templates/spending/edit_purchase.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}<title>Ramblin' - Add Purchase</title>{% endblock %}
+{% block title %}<title>Ramblin' - Edit Purchase</title>{% endblock %}
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'account/css/index.css' %}">
@@ -12,13 +12,13 @@
 
 <div class="container w-75 mt-3">
     <div class="card mx-auto">
-        <div class="card-header h2">Add Purchase</div>
+        <div class="card-header h2">Edit Purchase</div>
         <div class="card-body">
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
 
-                <button type="submit" class="btn btn-primary">Add</button>
+                <button type="submit" class="btn btn-primary">Submit changes</button>
             </form>
         </div>
     </div>
