--- a/Final_Project/travel/templates/trips/index.html
+++ b/Final_Project/travel/templates/trips/index.html
@@ -22,20 +22,27 @@
           <span id="txt1">- View all trips</span><i class="material-icons left activator">description</i>
         </div>
         <div class="card-action">
-
-          <a href="new_trip" class="activator">New Trip</a>
+          <a href="new_trip" class="waves-effect waves-light btn-small">New Trip</a>
+          <a href="join_trip" class="waves-effect waves-light btn-small">Join Existing Trip</a>
         </div>
 
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4" style="font-size: 68px;">My Trips<i class="material-icons right">close</i></span>
+          <span class="card-title grey-text text-darken-4" style="font-size: 68px;"><i class="material-icons right">close</i></span>
+
+
+
+        <ul class="collection with-header" style="width: 50vw; margin: auto; margin-top: 20px;">
+          <li class="collection-header"><h4>My Trips</h4></li>
 
           <ul>
-          {% for trip in trips %}
-            <li style="list-style-type: square; font-size: 32px; margin-left: 9px;">
-              {{ trip.name }}
-            </li><br>
-          {% endfor %}
+            {% for trip in trips %}
+              <li class="collection-item"><div>- {{ trip.name }}</div></li>
+            {% endfor %}
           </ul>
+
+        </ul>
+
+
 
         </div>
 
