--- a/Final_Project/travel/templates/spending/trip_finances.html
+++ b/Final_Project/travel/templates/spending/trip_finances.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<ul class="collection with-header" style="width: 75vw; margin: auto; margin-top: 20px;">
+<ul class="collection with-header" style="width: 75vw; margin: auto; margin-top: 20px; box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);">
         <li class="collection-header" style="text-align: center;"><h4>{{ trip }}<br> <br>Spending History</h4></li>
 
         <table class="highlight">
@@ -59,7 +59,7 @@
 
 </ul>
 
-<ul class="collection with-header" style="width: 75vw; margin: auto; margin-top: 60px;">
+<ul class="collection with-header" style="width: 75vw; margin: auto; margin-top: 60px; box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);">
         <li class="collection-header" style="text-align: center;"><h4>Debt Tracker</h4></li>
 
         <table class="highlight">
