--- a/Final_Project/travel/static/account/css/index.css
+++ b/Final_Project/travel/static/account/css/index.css
@@ -1,4 +1,21 @@
+body {
+  position: relative;
+  min-height: 100%;
+  min-height: 100vh;
+}
+footer {
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  height: 60px;
+}
+
+
 #map {
     height: 60vh;
     width: 99vw;
+}
+
+body {
+    margin-bottom: 80px;
 }
