--- a/Final_Project/travel/static/travel/css/base_style.css
+++ b/Final_Project/travel/static/travel/css/base_style.css
@@ -1,15 +1,16 @@
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-
-main {
-    flex: 1 0 auto;
+  position: relative;
+  min-height: 100%;
+  min-height: 100vh;
+}
+footer {
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  height: 60px;
 }
 
-#footer {
-   position:absolute;
-   bottom:0
+body {
+    margin-bottom: 80px;
 }
