--- a/Final_Project/travel/templates/spending/index.html
+++ b/Final_Project/travel/templates/spending/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<ul class="collection with-header" style="width: 50vw; margin: auto; margin-top: 20px;">
+<ul class="collection with-header" style="width: 35vw; margin: auto; margin-top: 20px; box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);">
         <li class="collection-header"><h4>Select a trip:</h4></li>
 
         <ul>
