--- a/Final_Project/travel/templates/trips/index.html
+++ b/Final_Project/travel/templates/trips/index.html
@@ -15,10 +15,10 @@
       <div class="card" style="width: 65vw;">
         <div class="card-image">
           <img src="{% static 'travel/images/road.jpg' %}" style="height: 60vh; width: 65vw">
-          <span class="card-title">"The highway sets the traveler's stage"</span>
+          <span class="card-title"><h3>"The highway sets the traveler's stage"</h3></span>
         </div>
         <div class="card-content">
-          <p>Everyone has a different definition of travel.<br>Let's find out what yours is.</p><br>
+          <h5>Everyone has a different definition of travel.<br>Let's find out what yours is.</h5><br>
           <span id="txt1">- View all trips</span><i class="material-icons left activator">description</i>
         </div>
         <div class="card-action">
@@ -31,12 +31,12 @@
 
 
 
-        <ul class="collection with-header" style="width: 50vw; margin: auto; margin-top: 20px;">
-          <li class="collection-header"><h4>My Trips</h4></li>
+        <ul class="collection with-header" style="width: 50vw; margin: auto; margin-top: 20px; box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);">
+          <li class="collection-header"><h3>My Trips</h3></li>
 
           <ul>
             {% for trip in trips %}
-              <li class="collection-item"><div>- {{ trip.name }}</div></li>
+              <li class="collection-item"><a href="/spending/finances/trip_{{ trip.id }}"><div><h5>- {{ trip.name }}</h5></div></a></li>
             {% endfor %}
           </ul>
 
