adds analytics report button

--- a/Final_Project/travel/static/spending/css/trip_finances.css
+++ b/Final_Project/travel/static/spending/css/trip_finances.css
@@ -9,3 +9,10 @@
 body {
     margin-bottom: 80px;
 }
+
+#analytics {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 40px;
+}
