--- a/Final_Project/travel/templates/spending/trip_finances.html
+++ b/Final_Project/travel/templates/spending/trip_finances.html
@@ -59,6 +59,10 @@
 
 </ul>
 
+<div id="analytics">
+    <a href="/spending/finances/analytics_{{ trip.id }}" class="waves-effect waves-light btn">Analytics</a>
+</div>
+
 <ul class="collection with-header" style="width: 75vw; margin: auto; margin-top: 60px; box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);">
         <li class="collection-header" style="text-align: center;"><h4>Debt Tracker</h4></li>
 
