--- a/Final_Project/travel/templates/trips/index.html
+++ b/Final_Project/travel/templates/trips/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="card-content">
           <h5>Everyone has a different definition of travel.<br>Let's find out what yours is.</h5><br>
-          <span id="txt1">- View all trips</span><i class="material-icons left activator">description</i>
+          <span id="txt1">- View my trips and itineraries</span><i class="material-icons left activator">description</i>
         </div>
         <div class="card-action">
           <a href="new_trip" class="waves-effect waves-light btn-small">New Trip</a>
@@ -32,11 +32,12 @@
 
 
         <ul class="collection with-header" style="width: 50vw; margin: auto; margin-top: 20px; box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);">
-          <li class="collection-header"><h3>My Trips</h3></li>
+          <li class="collection-header"><h3>My Trips</h3>
+          <br><h5><em>Click on a trip to view the itinerary</em></h5></li>
 
           <ul>
             {% for trip in trips %}
-              <li class="collection-item"><a href="/spending/finances/trip_{{ trip.id }}"><div><h5>- {{ trip.name }}</h5></div></a></li>
+              <li class="collection-item"><a href="/itinerary/trip_{{ trip.id }}"><div><h5>- {{ trip.name }}</h5></div></a></li>
             {% endfor %}
           </ul>
 
