updates itinerary formatting

--- a/Final_Project/travel/templates/itinerary/add_dayplan.html
+++ b/Final_Project/travel/templates/itinerary/add_dayplan.html
@@ -45,7 +45,7 @@
                 <br>
                 <div class="fieldWrapper">
                     {{ form.requirements.errors }}
-                    <label for="{{ form.requirements.id_for_label }}">Requirements (Anything you may need to bring):</label>
+                    <label for="{{ form.requirements.id_for_label }}">Requirements (List anything you may need to bring, separated by a comma):</label>
                     {{ form.requirements }}
                 </div>
                 <br>
