--- a/Final_Project/travel/templates/trips/index.html
+++ b/Final_Project/travel/templates/trips/index.html
@@ -37,7 +37,19 @@
 
           <ul>
             {% for trip in trips %}
-              <li class="collection-item"><a href="/itinerary/trip_{{ trip.id }}"><div><h5>- {{ trip.name }}</h5></div></a></li>
+
+
+
+
+              <li style="display: flex; align-items: center;" class="collection-item">
+                <a href="/itinerary/trip_{{ trip.id }}"><h5>- {{ trip.name }}</h5></a>
+                <a href="/itinerary/delete_dayplan_{{ trip.id }}_{{ dayplan.id }}"><i style="margin-left: 10px;" class="material-icons small">delete</i></a>
+              </li>
+
+
+
+
+
             {% endfor %}
           </ul>
 
