--- a/Final_Project/travel/templates/base.html
+++ b/Final_Project/travel/templates/base.html
@@ -27,17 +27,17 @@
 {% endblock %}
 
     {% block pagination %}
-      {% if is_paginated %}
-          <div class="pagination">
+      {% if page_obj %}
+          <div style="justify-content: center; margin-top: 40px;" class="pagination">
               <span class="page-links">
                   {% if page_obj.has_previous %}
-                      <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                      <a style="font-size: 24px;" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous - </a>
                   {% endif %}
-                  <span class="page-current">
-                      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                  <span style="font-size: 24px;" class="page-current">
+                      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                   </span>
                   {% if page_obj.has_next %}
-                      <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+                      <a style="font-size: 24px;" href="{{ request.path }}?page={{ page_obj.next_page_number }}"> - next</a>
                   {% endif %}
               </span>
           </div>
