adds some basic styling through entire site

--- a/Final_Project/travel/templates/account/index.html
+++ b/Final_Project/travel/templates/account/index.html
@@ -6,18 +6,17 @@
 
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'account/css/index.css' %}">
+<link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 
 
-<div class="card-image">
-  <img src="{% static 'trips/images/map.jpg' %}" id="map">
-</div>
 
 
 
-<div id="quote" style="text-align: center; margin-top: 55px;">
+
+<div id="quote" style="text-align: center; margin-top: 55px; font-family: 'Patua One', cursive;">
   <h4>I've got the wheels to ride and the wheels to run,</h4>
   <h4>Some say I got ramblin' in my blood</h4>
   <h4>No pretty girl can slow me down</h4>
