--- a/Final_Project/travel/templates/account/profile.html
+++ b/Final_Project/travel/templates/account/profile.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<div class="card large">
+<div id="card" class="card large">
   <div class="card-header">
     <img src="{{ info.picture.url }}" alt="Profile pic">
   </div>
