--- a/Final_Project/travel/templates/itinerary/add_contact.html
+++ b/Final_Project/travel/templates/itinerary/add_contact.html
@@ -5,7 +5,7 @@
 {% block title %}<title>Ramblin' - Add Contact</title>{% endblock %}
 
 {% block stylesheet %}
-<link rel="stylesheet" href="{% static 'account/css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'account/css/edit_profile.css' %}">
 {% endblock %}
 
 {% block content %}
