--- a/Final_Project/travel/templates/itinerary/itin.html
+++ b/Final_Project/travel/templates/itinerary/itin.html
@@ -70,7 +70,7 @@
             </li>
         </ul>
 
-        <div class="edit_delete" style="display: flex; justify-content: center">
+        <div class="edit_delete" style="display: flex; justify-content: center; background-color: white;">
             <a href="/itinerary/edit_dayplan_{{ trip.id }}_{{ dayplan.id }}"><i style="margin-right: 10px;" class="material-icons small">edit</i></a>
             <a href="/itinerary/delete_dayplan_{{ trip.id }}_{{ dayplan.id }}"><i style="margin-left: 10px;" class="material-icons small">delete</i></a>
         </div>
