--- a/Final_Project/travel/templates/navbar.html
+++ b/Final_Project/travel/templates/navbar.html
@@ -1,5 +1,5 @@
-<nav class="nav-extended green darken-4">
-    <div class="nav-wrapper">
+<nav class="nav-extended teal">
+    <div class="nav-wrapper black-text">
       {% load static %}
       <a href="/account" class="brand-logo">Ramblin'</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
