--- a/Final_Project/travel/templates/trips/index.html
+++ b/Final_Project/travel/templates/trips/index.html
@@ -14,7 +14,7 @@
     <div class="col s6 offset-s2">
       <div class="card" style="width: 65vw;">
         <div class="card-image">
-          <img src="{% static 'travel/images/road.jpg' %}" style="height: 60vh; width: 65vw">
+          <img src="{% static 'trips/images/map.jpg' %}" style="height: 60vh; width: 65vw padding-right: 1px;">
           <span class="card-title"><h3>"The highway sets the traveler's stage"</h3></span>
         </div>
         <div class="card-content">
