--- a/Final_Project/travel/static/account/css/profile.css
+++ b/Final_Project/travel/static/account/css/profile.css
@@ -4,20 +4,20 @@ body {
 
 .card {
   background-color: #f4f4f4;
-  width: 500px;
+  width: 600px;
   margin: 10px auto;
   box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.7);
 }
 
 #card {
-  height: 800px;
+  height: 1100px;
 
 }
 
 .card-header {
   overflow: hidden;
   width: 100%;
-  height: 550px;
+  height: 500px;
 }
 
 .card-header img{
@@ -27,20 +27,20 @@ body {
 .card-content {
   width: 85%;
   margin: 35px auto;
-  height: 425px;
+  height: 625px;
 }
 
 .card-content h3 {
   font-size: 38px;
   margin-bottom: 0;
-  color: #303F9F;
+  color: #003630;
   font-family: 'Montserrat', sans-serif;
 }
 
 .card-content h4 {
   font-size: 24px;
   margin-top: 0;
-  color: #FF5252;
+  color: #009688;
   font-family: 'Montserrat', sans-serif;
 }
 
