--- a/Final_Project/travel/templates/account/signup.html
+++ b/Final_Project/travel/templates/account/signup.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class="container w-75 mt-3">
-    <div class="card mx-auto">
+    <div class="card mx-auto" style="width: 40vw;">
         <div class="card-header h2">Sign Up</div>
         <div class="card-body">
             <form method="post">
