adds updates and coming soon plans

--- a/Final_Project/travel/templates/spending/trip_finances.html
+++ b/Final_Project/travel/templates/spending/trip_finances.html
@@ -94,4 +94,4 @@
 </ul>
 
 {% endblock %}
-finances/traveler_analytics_<int:trip_id>_<int:traveler_id>
+<!--finances/traveler_analytics_<int:trip_id>_<int:traveler_id>-->
