--- a/Final_Project/travel/templates/navbar.html
+++ b/Final_Project/travel/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="nav-extended teal">
     <div class="nav-wrapper black-text">
       {% load static %}
-      <a href="/account" class="brand-logo">Ramblin'</a>
+      <a href="/account" class="brand-logo" style="margin-left: 3px;">Ramblin'</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         {% if user.is_authenticated %}
@@ -20,7 +20,7 @@
         <li class="tab"><a href="/trips">Trips</a></li>
         <li class="tab"><a href="/spending">Spending</a></li>
         {% endif %}
-        <li class="tab"><a href="">Forum</a></li>
+        <li class="tab"><a href="/account/site_plans">Forum</a></li>
         {% if user.is_superuser %}
         <li class="tab"><a href="/admin">Admin</a></li>
         {% endif %}
